# finhub-etl

./: .env  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml  readme.md
data/: financials.json  (+1 more)
etl-pipeline/: .dockerignore  Dockerfile  pyproject.toml
etl-pipeline/docs/: README.md  base.md  endpoints.json  handler-testing-checklist.md  handlers_summary.md
etl-pipeline/migrations/: env.py
etl-pipeline/migrations/versions/: 005a6a095f04_create_institutional_profiles_table.py  0fb54e4bb57a_create_earnings_quality_scores_table.py  15df50845d07_update_reported_financials.py  285586c4bbdb_update_price_metrics_table_to_match_api_.py  30a85378929b_create_historical_market_cap_table.py  350e20a82687_description.py  3fa01e57427b_add_currency_and_finnhub_industry_to_.py  5b75b43d7f87_update_news_table.py  710daf900ae9_add_quarter_and_year_to_revenue_.py  d9d276fe3796_update_chandle_stick.py  ed333ea09156_update_whole_dbs_base_layout.py  efaf274996bd_create_historical_employee_count_table.py
etl-pipeline/src/finhub_etl/: __init__.py
etl-pipeline/src/finhub_etl/config/: finhub.py
etl-pipeline/src/finhub_etl/loaders/: in_universe.py  load_shariah.py
etl-pipeline/src/finhub_etl/models/: executive.py  filing.py  general_news.py  sector_metrics.py
etl-pipeline/src/finhub_etl/producer/: connection.py
etl-pipeline/src/finhub_etl/scheduler/: base.py
etl-pipeline/src/finhub_etl/utils/: mappings.py  save.py
etl-pipeline/tests/: test_job_publish.py
worker/: .dockerignore  .env.example  Dockerfile  pyproject.toml
worker/src/worker/: example_worker.py  main.py  main_async.py
worker/src/worker/config/: __init__.py
worker/src/worker/examples/: publish_tasks.py
worker/src/worker/message_queue/: __init__.py  connection.py  connection_aio.py  consumer.py  consumer_aio.py
worker/src/worker/models/: example_data.py  quote.py  symbols.py
worker/src/worker/queue/: __init__.py  connection.py  consumer.py  processor.py  producer.py  schemas.py
worker/src/worker/utils/: __init__.py  csv_loader.py  mappings.py
worker/tests/: test_all_big_dump.py  test_model_handler.py  test_store_db.py
(+164 files in other folders)
