[project]
name = "finhub_etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Ritesh Mane",email = "maneriteshh@gmail.com"}
]
packages = [
  { include = "finhub_etl", from = "src" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "alembic (>=1.17.1,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "dotenv (>=0.9.9,<0.10.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)"
]
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
